product api by user dev